--- a/leaf.ipynb
+++ b/leaf.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#https://www.kaggle.com/c/leaf-classification/submissions",
+    "#AUC ~0.26589",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "import pandas as pd"
