--- a/leaf.ipynb
+++ b/leaf.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#https://www.kaggle.com/c/leaf-classification/submissions",
-    "#AUC ~0.26589",
+    "#AUC ~0.26589\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "import pandas as pd"
